@@ -9,10 +9,6 @@ COPY ./scripts/base.sh /tmp/base.sh
 RUN chmod +x /tmp/base.sh && \
 /tmp/base.sh
 
-COPY ./scripts/java.sh /tmp/java.sh
-RUN chmod +x /tmp/java.sh && \
-/tmp/java.sh
-
 COPY ./scripts/imagemagick.sh /tmp/imagemagick.sh
 RUN chmod +x /tmp/imagemagick.sh && \
 /tmp/imagemagick.sh
@@ -24,10 +20,6 @@ RUN chmod +x /tmp/node.sh && \
 COPY ./scripts/php.sh /tmp/php.sh
 RUN chmod +x /tmp/php.sh && \
 /tmp/php.sh
-
-COPY ./scripts/android.sh /tmp/android.sh
-RUN chmod +x /tmp/android.sh && \
-/tmp/android.sh
 
 RUN useradd ${DEPLOY_USER}
 
@@ -43,14 +35,6 @@ RUN chown $USER:$USER /scripts && \
     mkdir -p /home/deploy/app && \
     chown -R deploy:deploy /home/deploy
 
-ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64
-ENV GRADLE_HOME /opt/gradle-4.1
-ENV KOTLIN_HOME /opt/kotlinc
-ENV ANDROID_HOME /opt/android-sdk
-ENV PATH ${PATH}:${ANDROID_HOME}/cmake/bin:${GRADLE_HOME}/bin:${KOTLIN_HOME}/bin:${ANDROID_HOME}/emulator:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools:${ANDROID_HOME}/tools/bin:${ANDROID_NDK_HOME}
-ENV _JAVA_OPTIONS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap
-
-## onbuild
 ONBUILD USER root
 
 ONBUILD COPY . /home/deploy/app
